--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BookersRevel2</title>
+    <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,37 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <nav class="navbar navbar-fixed-top navbar-inverse">
+        <div class="container">
+          <nav class="nav navbar-nav navbar-left">
+            <h4><span>Bookers</span></h4>
+          </nav>
+          <nav>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "　Home", root_path, class:"glyphicon glyphicon-home home" %></li>
+              <li><%= link_to "　About", home_about_index_path, class:"glyphicon glyphicon-link about" %></li>
+              <li><%= link_to "　sign up", new_user_registration_path, class:"glyphicon glyphicon-edit sign_up" %></li>
+              <li><%= link_to "　login", new_user_session_path, class:"glyphicon glyphicon-log-in sign_in" %></li>
+            </ul>
+          </nav>
+        </div>
+      </nav>
+
+    </header>
+    <div class="body" style="padding-top: 70px">
+      <%= yield %>
+    </div>
+
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-9">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
