--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up" class:"btn btn-success" %>
+        <%= f.submit "Sign up", class:"btn btn-success" %>
       </div>
     <% end %>
 
