--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <%# ログインしている際のnav %>
             <% if user_signed_in? %>
               <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to "　Home", root_path, class:"glyphicon glyphicon-home home" %></li>
+                <li><%= link_to "　Home", user_path(current_user), class:"glyphicon glyphicon-home home" %></li>
                 <li><%= link_to "　Users", users_path, class:"glyphicon glyphicon-user users" %></li>
                 <li><%= link_to "　Books", books_path, class:"glyphicon glyphicon-book books" %></li>
                 <li><%= link_to "　logout", destroy_user_session_path, method:"delete", class:"glyphicon glyphicon-log-out logout" %></li>
