--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,55 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+            <h2>User info</h2>
+            <%# image_tag %>
+            <table class="table" >
+                <tbody>
+                    <tr>
+                        <th>name</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th>introduction</th>
+                        <th></th>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="row">
+                <%= link_to '', edit_user_path(current_user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+            </div>
+            <h2>New book</h2>
+            <form>
+                <%# 本作成のフォーム %>
+                <%# <% form_for @book do |f| %> %>
+                    <%# <div class="field"> %>
+                        <%# <%= f.label :title %><br /> %>
+                        <%# <%= f.text_field :title %> %>
+                    <%# </div> %>
+        </div>
+        <div class="col-xs-9">
+            <h2>Books</h2>
+            <%# Books一覧表示 %>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Opinion</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <%# @books.each do |book| %>
+                    <tr>
+                        <td>あ</td>
+                        <td>い</td>
+                        <td>う</td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+        </div>
+    </div>
+</div>
