--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,23 @@
 <div class="container">
     <div class="row">
-        <h1>User info</h1>
-        
+        <h2>User info</h2>
+        <%= form_for(@user) do |f| %>
+            <div class="field">
+                <label>Name</label>
+                <%= f.text_field :name %>
+            </div>
+            <div class="field">
+                <label>Image</label>
+                <%= f.attachment_field :profile_image %>
+            </div>
+            <div class="field">
+                <label>introduction</label>
+                <%= f.text_area :introduction %>
+            </div>    
+            <div class="actions">
+                <%= f.submit %>
+            </div>    
+        <% end %>
 
     </div>
 </div>
