--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,42 +1,9 @@
-
 <div class="container">
     <div class="row">
-        <div class="col-xs-3">
-            <h2>User info</h2>
-            <%# <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %> %>
-            <table class="table" >
-                <tbody>
-                    <tr>
-                        <th>name</th>
-                        <th><%= @user.name %></th>
-                    </tr>
-                    <tr>
-                        <th>introduction</th>
-                        <th></th>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="row">
-                <%= link_to '', edit_user_path(current_user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
-            </div>
-            <h2>New book</h2>
-            <%# 本作成のフォーム %>
-            <%# <% form_for(@book) do |f| %> %>
-                <div class="field">
-                    <%# <%= f.label :title<br /> %> %>
-                    <%# <%= f.text_field :title %> %>
-                </div>
-                <div class="field">
-                    <%# <%= f.label :opinion<br /> %> %>
-                    <%# <%= f.text_field :opinion %> %>
-                </div>
-                <div class="action">
-                    <%# <%= f.submmit 'Create Book', class:"btn btn-info" %> %>
-                </div>
-            <%# <% end %> %>
+        <%# <%= render 'users/userinfo'%> %>
+        <%# <%= render 'books/newbook' %> %>
+    </div>
 
-
-        </div>
         <div class="col-xs-9">
             <h2>Users</h2>
             <table class="table">
@@ -49,17 +16,15 @@
                 </thead>
                 <tbody>
                     <%# ここにUsers繰り返し  %>
-                    <%# <% %> %>
+                    <% @users.each do |user| %>
                         <tr>
-                            <td>あ</td>
-                            <td>い</td>
-                            <td>う</td>
+                            <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %></td>
+                            <td><%= user.name %></td> 
+                            <td><%= link_to 'Show', user_path(user.id) %></td> 
                         </tr>
-                    <%# <% end %> %>
+                    <% end %>
                 </tbody>
             </table>
-
-
         </div>
     </div>
 </div>
