--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,44 @@
 <div class="container">
     <div class="row">
-        <%# <%= render 'users/userinfo'%> %>
-        <%# <%= render 'books/newbook' %> %>
-    </div>
+        <div class="col-xs-3">
+            <%# ここにエラ〜メッセージの通知を出す。 %>
+
+            <h2>User info</h2>
+            <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %>
+            <table class="table" >
+                <tbody>
+                    <tr>
+                        <th>name</th>
+                        <th><%= current_user.name %></th>
+                    </tr>
+                    <tr>
+                        <th>introduction</th>
+                        <th><%= current_user.introduction %></th>
+                    </tr>
+                </tbody>
+            </table>
+        <div class="row">
+            <%= link_to '', edit_user_path(current_user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+        </div>
+
+        <h2>New book</h2>
+            <%# エラー表示する %>
+            <%= form_for(@book) do |f| %>
+                <div class="field row">
+                    <%= f.label :title %>
+                    <%= f.text_field :title, class:"col-xs-12 book_title" %>
+                </div>
+                <div class="field row">
+                    <%= f.label :opinion %>
+                    <%= f.text_area :body, class:"col-xs-12 book_body" %>
+                </div>
+                <div class="actions row">
+                    <%= f.submit 'Create Book', class:"btn btn-primary col-xs-12" %>
+                </div>
+            <% end %>
+        </div>
+
+
 
         <div class="col-xs-9">
             <h2>Users</h2>
@@ -18,7 +54,7 @@
                     <%# ここにUsers繰り返し  %>
                     <% @users.each do |user| %>
                         <tr>
-                            <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %></td>
+                            <td><%= attachment_image_tag user, :profile_image, :fill, 40, 40, fallback: "no_image-icon.jpg" %></td>
                             <td><%= user.name %></td> 
                             <td><%= link_to 'Show', user_path(user.id) %></td> 
                         </tr>
