--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,16 @@
 <div class="container">
+    <%# エラー通知表示 %>
+    <% if @book_new.errors.any? %>
+        <h3><%= @book_new.errors.count %> errors prohibited this obj from being saved:</h3>
+        <ul>    
+            <% @book_new.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    <% end %>
+    
     <div class="row">
         <div class="col-xs-3">
-            <%# ここにエラ〜メッセージの通知を出す。 %>
 
             <h2>User info</h2>
             <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %>
@@ -22,8 +31,7 @@
         </div>
 
         <h2>New book</h2>
-            <%# エラー表示する %>
-            <%= form_for(@book) do |f| %>
+            <%= form_for(@book_new) do |f| %>
                 <div class="field row">
                     <%= f.label :title %>
                     <%= f.text_field :title, class:"col-xs-12 book_title" %>
