--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 
-
 <div class="container">
+    <%# 各通知の表示 %>
+    <p><%= notice %></p>
     <div class="row">
         <div class="top-message col-md-offset-3 col-md-6">
             <h1>welcome to <span class ="glyphicon glyphicon-book"><strong>Bookers</strong> !!<span></h1>
@@ -10,11 +11,11 @@
 
             <p>about various books!</p>
 
-            <div class="btn btn-info">
+            <div class="btn btn-info col-xs-10 col-xs-offset-1 sign_in">
                 <%= link_to 'Log in', new_user_session_path %>
             </div>
 
-            <div class="btn btn-success">
+            <div class="btn btn-success col-xs-10 col-xs-offset-1 sign_up">
                 <%= link_to 'Sign up', new_user_registration_path %>
             </div>
 
