--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,33 +10,31 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-fixed-top navbar-inverse">
-        <div class="container">
-          <nav class="nav navbar-nav navbar-left">
-            <h4><span>Bookers</span></h4>
-          </nav>
-          <nav>
-            <%# ログインしている際のnav %>
-            <% if user_signed_in? %>
-              <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to "　Home", user_path(current_user), class:"glyphicon glyphicon-home home" %></li>
-                <li><%= link_to "　Users", users_path, class:"glyphicon glyphicon-user users" %></li>
-                <li><%= link_to "　Books", books_path, class:"glyphicon glyphicon-book books" %></li>
-                <li><%= link_to "　logout", destroy_user_session_path, method:"delete", class:"glyphicon glyphicon-log-out logout" %></li>
-              </ul>
-            <% else %>
-              <%# サインアウトの際のnav %>
-              <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to "　Home", root_path, class:"glyphicon glyphicon-home home" %></li>
-                <li><%= link_to "　About", home_about_index_path, class:"glyphicon glyphicon-link about" %></li>
-                <li><%= link_to "　sign up", new_user_registration_path, class:"glyphicon glyphicon-edit sign_up" %></li>
-                <li><%= link_to "　login", new_user_session_path, class:"glyphicon glyphicon-log-in sign_in" %></li>
-              </ul>
-            <% end %>
-          </nav>
-        </div>
-      </nav>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+          <h4>Bookers</h4>
+        </nav>
+        <nav>
+          <%# ログインしている際のnav %>
+          <% if user_signed_in? %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "　Home", user_path(current_user), class:"glyphicon glyphicon-home home" %></li>
+              <li><%= link_to "　Users", users_path, class:"glyphicon glyphicon-user users" %></li>
+              <li><%= link_to "　Books", books_path, class:"glyphicon glyphicon-book books" %></li>
+              <li><%= link_to "　logout", destroy_user_session_path, method:"delete", class:"glyphicon glyphicon-log-out logout" %></li>
+            </ul>
+          <% else %>
+            <%# サインアウトの際のnav %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "　Home", root_path, class:"glyphicon glyphicon-home home" %></li>
+              <li><%= link_to "　About", home_about_index_path, class:"glyphicon glyphicon-link about" %></li>
+              <li><%= link_to "　sign up", new_user_registration_path, class:"glyphicon glyphicon-edit sign_up" %></li>
+              <li><%= link_to "　login", new_user_session_path, class:"glyphicon glyphicon-log-in sign_in" %></li>
+            </ul>
+          <% end %>
+        </nav>
+      </div>
 
     </header>
     <div class="body" style="padding-top: 70px">
