--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
+
     <div class="row">
         <div class="col-xs-3">
-            <%# ここにエラ〜メッセージの通知を出す。 %>
 
             <h2>User info</h2>
             <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %>
@@ -22,8 +22,7 @@
         </div>
 
         <h2>New book</h2>
-            <%# エラー表示する %>
-            <%= form_for(@book) do |f| %>
+            <%= form_for(@book_new) do |f| %>
                 <div class="field row">
                     <%= f.label :title %>
                     <%= f.text_field :title, class:"col-xs-12 book_title" %>
