[finish]Bookers_revel2

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                <%# Books一覧表示 %>
                     <% @books.each do |book| %>
                         <tr>
                             <td>
