--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,7 +3,7 @@
 
         <div class="col-md-6 col-md-offset-3">
             
-            <h1>Editting book</h1>
+            <h1>Editing Book</h1>
             <%# エラー通知表示 %>
             <% if @book.errors.any? %>
                 <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
@@ -13,7 +13,7 @@
                     <% end %>
                 </ul>
             <% end %>
-            <%# エラー表示する %>
+            <%# 本のupdate用フォーム %>
                 <%= form_for(@book) do |f| %>
                     <div class="field row">
                         <%= f.label :title %>
