--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 
         <div class="col-xs-9">
             <h2>Book detail</h2>
-            <%# Book詳細部分 %>
+            <%# Book詳細表示 %>
             <table class="table">
                 <tbody>
                     <tr>
@@ -21,7 +21,7 @@
                             <% end %>
                         </td>
                         <td><%= @book.body %></td>
-                        
+                        <%# 見ているdetailページがログインしているユーザならば、「Edit」と「Destroy」を表示する。 %>
                         <% if @book.user == current_user %>
                             <td>
                                 <%= link_to "Edit", edit_book_path(@book.id), class:"btn-sm btn-success" %>
