--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,13 +11,8 @@
 
             <p>about various books!</p>
 
-            <div class="btn btn-info col-xs-10 col-xs-offset-1 sign_in">
-                <%= link_to 'Log in', new_user_session_path %>
-            </div>
-
-            <div class="btn btn-success col-xs-10 col-xs-offset-1 sign_up">
-                <%= link_to 'Sign up', new_user_registration_path %>
-            </div>
+            <p><%= link_to 'Log in', new_user_session_path, class:"btn btn-info col-xs-10 col-xs-offset-1" %></p>
+            <p><%= link_to 'Sign up', new_user_registration_path, class:"btn btn-success col-xs-10 col-xs-offset-1" %></p>
 
 
         </div>
