--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,16 @@
 <div class="container">
     <div class="row">
         <h2>User info</h2>
+        <%# エラー通知表示 %>
+        <% if @user.errors.any? %>
+            <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+            <ul>    
+                <% @user.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+            </ul>
+        <% end %>
+        <%# ユーザのupdate用のフィールド %>
         <%= form_for(@user) do |f| %>
             <div class="field">
                 <label>Name</label>
